--- a/index.html
+++ b/index.html
@@ -4,70 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Coin Website</title>
+    <title>CryptoCoin Fun Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1>Welcome to the Crypto Wonderland</h1>
-            <p>At 100m Market Cap, They Will Be Your Friends Too!</p>
-            <a href="#" class="cta-button">Join the Madness</a>
-        </div>
-    </section>
-
-    <!-- Memes and Fun Section -->
-    <section class="memes">
-        <h2>The Crypto Elite</h2>
-        <div class="meme-grid">
-            <div class="meme-item">
-                <img src="your-image-path.png" alt="Crypto Leaders">
-                <p>Meet the squad that will "HODL" through the dips!</p>
-            </div>
-            <div class="meme-item">
-                <img src="https://i.imgur.com/4A2ak7I.png" alt="Rocket to the Moon">
-                <p>"To the Moon!" - said every crypto investor ever.</p>
-            </div>
-            <div class="meme-item">
-                <img src="https://i.imgur.com/OPCemj4.png" alt="When Lambo">
-                <p>"When Lambo?" - The question that keeps us all going.</p>
-            </div>
-            <div class="meme-item">
-                <img src="https://i.imgur.com/9xbkbNO.png" alt="Crypto Rollercoaster">
-                <p>Up and down like a crypto rollercoaster. Enjoy the ride!</p>
-            </div>
+            <img src="your-image-path.png" alt="Crypto Meme Heroes" class="hero-image">
+            <h1>Welcome to Crypto Madness</h1>
+            <p>At 100M MC, they will be your friends too!</p>
+            <a href="#" class="cta-button">Join the Movement</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section class="about">
-        <h2>About CryptoCoin</h2>
-        <p>CryptoCoin is not just a currency; it's a lifestyle. Join us as we venture into the wild world of digital finance, where memes are as valuable as market trends, and the moon is always just one trade away.</p>
+        <h2>What is CryptoCoin?</h2>
+        <p>CryptoCoin is the latest and greatest in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!</p>
     </section>
 
-    <!-- Featured Figures Section -->
-    <section class="figures">
-        <h2>They HODL, So You Don't Have To</h2>
-        <div class="figures-grid">
-            <div class="figure-item">
-                <img src="https://i.imgur.com/X7bg6V1.png" alt="Vitalik Buterin">
-                <p>Vitalik Buterin - The Genius. Invented Ethereum, still can't find a shirt that fits.</p>
+    <!-- Memes Section -->
+    <section class="memes">
+        <h2>Survival Memes for Every Investor</h2>
+        <div class="meme-grid">
+            <div class="meme-item">
+                <img src="https://via.placeholder.com/200" alt="Meme 1">
+                <p>"When Lambo?" - The eternal question.</p>
             </div>
-            <div class="figure-item">
-                <img src="https://i.imgur.com/1wQxBL3.png" alt="Pavel Durov">
-                <p>Pavel Durov - Telegram Boss. Doesn't wear a shirt. Doesn't need one.</p>
+            <div class="meme-item">
+                <img src="https://via.placeholder.com/200" alt="Meme 2">
+                <p>HODL like a champ. Dips are for the weak!</p>
             </div>
-            <div class="figure-item">
-                <img src="https://i.imgur.com/PlIhNba.png" alt="Elon Musk">
-                <p>Elon Musk - Sends tweets, markets shake. Probably owns your favorite meme coin.</p>
+            <div class="meme-item">
+                <img src="https://via.placeholder.com/200" alt="Meme 3">
+                <p>"To the Moon!" - As declared by the space king.</p>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 CryptoCoin. Not Financial Advice, but a lot of Fun.</p>
+        <p>&copy; 2024 CryptoCoin. All Rights Reserved. Remember: This is not financial advice!</p>
     </footer>
+
 </body>
 </html>
