--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CryptoCoin Fun Page</title>
+    <title>FOUR FRIENDS</title>
     <style>
         /* General Reset */
         * {
@@ -134,16 +134,16 @@
     <section class="hero">
         <div class="hero-content">
             <img src="your-image-path.png" alt="Crypto Meme Heroes" class="hero-image">
-            <h1>Welcome to Crypto Madness</h1>
+            <h1>Welcome to Crypto Madness of Four Friends!</h1>
             <p>At 100M MC, they will be your friends too!</p>
-            <a href="#" class="cta-button">Join the Movement</a>
+            <a href="https://pump.fun/2cEU2CxhFqHmWDc4xBAf1mdobEhKoAjsSmjMy1z2pump" class="cta-button">Join the Movement and buy yourself a friend!</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section class="about">
-        <h2>What is CryptoCoin?</h2>
-        <p>CryptoCoin is the latest and greatest in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!</p>
+        <h2>What is Four Friends?</h2>
+        <p>Four Friends are the latest and greatest friends in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!</p>
     </section>
 
     <!-- Memes Section -->
@@ -151,15 +151,15 @@
         <h2>Survival Memes for Every Investor</h2>
         <div class="meme-grid">
             <div class="meme-item">
-                <img src="https://via.placeholder.com/200" alt="Meme 1">
-                <p>"When Lambo?" - The eternal question.</p>
+                <img src="https://imgur.com/a/YKtJ0zF" alt="Meme 1">
+                <p>"When Lambo?" - The eternal question. Without an answer!</p>
             </div>
             <div class="meme-item">
-                <img src="https://via.placeholder.com/200" alt="Meme 2">
-                <p>HODL like a champ. Dips are for the weak!</p>
+                <img src="https://imgur.com/a/U4j2yak" alt="Meme 2">
+                <p>HODL like a champ. Dips are for the weak! FIGHT!</p>
             </div>
             <div class="meme-item">
-                <img src="https://via.placeholder.com/200" alt="Meme 3">
+                <img src="https://imgur.com/a/9Dz2bY5" alt="Meme 3">
                 <p>"To the Moon!" - As declared by the space king.</p>
             </div>
         </div>
@@ -167,7 +167,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 CryptoCoin. All Rights Reserved. Remember: This is not financial advice!</p>
+        <p>&copy; 2024 Four Friends All Rights Reserved. Remember: This is not financial advice!</p>
     </footer>
 
 </body>
