--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <img src="your-image-path.png" alt="Crypto Meme Heroes" class="hero-image">
+            <img src="https://i.imgur.com/8hvful3.jpeg" alt="FOUR FRIENDS" class="hero-image">
             <h1>Welcome to Crypto Madness of Four Friends!</h1>
             <p>At 100M MC, they will be your friends too!</p>
             <a href="https://pump.fun/2cEU2CxhFqHmWDc4xBAf1mdobEhKoAjsSmjMy1z2pump" class="cta-button">Join the Movement and buy yourself a friend!</a>
@@ -151,15 +151,15 @@
         <h2>Survival Memes for Every Investor</h2>
         <div class="meme-grid">
             <div class="meme-item">
-                <img src="https://imgur.com/a/YKtJ0zF" alt="Meme 1">
+                <img src="https://i.imgur.com/VMNkpKR.jpeg" alt="Meme 1">
                 <p>"When Lambo?" - The eternal question. Without an answer!</p>
             </div>
             <div class="meme-item">
-                <img src="https://imgur.com/a/U4j2yak" alt="Meme 2">
+                <img src="https://i.imgur.com/1bKWpT3.jpeg" alt="Meme 2">
                 <p>HODL like a champ. Dips are for the weak! FIGHT!</p>
             </div>
             <div class="meme-item">
-                <img src="https://imgur.com/a/9Dz2bY5" alt="Meme 3">
+                <img src="https://i.imgur.com/IcRSf4N.jpeg" alt="Meme 3">
                 <p>"To the Moon!" - As declared by the space king.</p>
             </div>
         </div>
