--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 
     <!-- About Section -->
     <section class="about">
-        <h2>What is Four Friends?</h2>
-        <p>Four Friends are the latest and greatest friends in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!
-        Vitalik Buterin - The wizard of smart contracts and the king of unexpected fashion choices with high percent to get rich and low percent to find GF. Always on the lookout for a new blockchain because the current one is never decentralized enough.
-        Elon Musk - Captain of the meme coin space fleet and the leader of the Dogecoin hype. You never know if he'll launch your coin to the moon or crash the market with a single tweet.
-        Pavel Durov - Telegram warrior and 'abs of steel' ambassador of the crypto world. If you can't send a message in his app, it probably wasn't important anyway.
-        Changpeng Zhao (CZ) - Master ringmaster of the Binance circus, managing billions with a smile like he's running a local sushi joint. His secret move: buy the dip, sell the rip (but only when he tells you to!).
-        </p>
+        <h2>Who are Four Friends?</h2>
+        <p>Four Friends are the latest and greatest friends in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!</p>
+        <p>Vitalik Buterin - The wizard of smart contracts and the king of unexpected fashion choices with high percent to get rich and low percent to find GF. Always on the lookout for a new blockchain because the current one is never decentralized enough.</p>
+        <p>Elon Musk - Captain of the meme coin space fleet and the leader of the Dogecoin hype. You never know if he'll launch your coin to the moon or crash the market with a single tweet.</p>
+        <p>Pavel Durov - Telegram warrior and 'abs of steel' ambassador of the crypto world. If you can't send a message in his app, it probably wasn't important anyway.</p>
+        <p>Changpeng Zhao (CZ) - Master ringmaster of the Binance circus, managing billions with a smile like he's running a local sushi joint. His secret move: buy the dip, sell the rip (but only when he tells you to!).</p>
+        
     </section>
 
     <!-- Memes Section -->
