--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     <!-- About Section -->
     <section class="about">
         <h2>Who are Four Friends?</h2>
+        <img src="https://i.imgur.com/s4BDu3i.jpeg" alt="FOUR FRIENDS" class="hero-image">
         <p>Four Friends are the latest and greatest friends in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!</p>
         <p>Vitalik Buterin - The wizard of smart contracts and the king of unexpected fashion choices with high percent to get rich and low percent to find GF. Always on the lookout for a new blockchain because the current one is never decentralized enough.</p>
         <p>Elon Musk - Captain of the meme coin space fleet and the leader of the Dogecoin hype. You never know if he'll launch your coin to the moon or crash the market with a single tweet.</p>
