--- a/index.html
+++ b/index.html
@@ -141,13 +141,14 @@
             <img src="your-image-path.png" alt="Crypto Meme Heroes" class="hero-image">
             <h1>Welcome to Crypto Madness of Four Friends!</h1>
             <p>At 100M MC, they will be your friends too!</p>
-            <a href="https://pump.fun/2cEU2CxhFqHmWDc4xBAf1mdobEhKoAjsSmjMy1z2pump" class="cta-button">Join the Movement and buy yourself a friend!</a>
+            <a href="https://pump.fun/2cEU2CxhFqHmWDc4xBAf1mdobEhKoAjsSmjMy1z2pump" class="cta-button">Join the Movement and buy yourself a friend! (Pump.fun link)</a>
+            <a href="https://t.me/four_friends_portal" class="cta-button">Join the Movement and chat with us! (Telegram link)</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section class="about">
-        <h2>What is Four Friends?</h2>
+        <h2>Who are Four Friends?</h2>
         <p>Four Friends are the latest and greatest friends in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!</p>
     </section>
 
