--- a/index.html
+++ b/index.html
@@ -128,8 +128,17 @@
         }
 
         /* Description Section */
+        .description {
+            padding: 20px;
+            text-align: center; /* Center align the text */
+        }
+
         .description p {
             margin-bottom: 15px; /* Add space between paragraphs */
+            max-width: 800px; /* Keep the text readable */
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
         }
     </style>
 </head>
@@ -138,17 +147,17 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <img src="your-image-path.png" alt="Crypto Meme Heroes" class="hero-image">
+            <img src="https://i.imgur.com/0Vx3RrA.jpeg" alt="Four Friends" class="hero-image">
             <h1>Welcome to Crypto Madness of Four Friends!</h1>
             <p>At 100M MC, they will be your friends too!</p>
-            <a href="https://pump.fun/2cEU2CxhFqHmWDc4xBAf1mdobEhKoAjsSmjMy1z2pump" class="cta-button">Join the Movement and buy yourself a friend! (Pump.fun link)</a>
-            <a href="https://t.me/four_friends_portal" class="cta-button">Join the Movement and chat with us! (Telegram link)</a>
+            <a href="https://pump.fun/2cEU2CxhFqHmWDc4xBAf1mdobEhKoAjsSmjMy1z2pump" class="cta-button">Join the Movement and buy yourself a friend (Pump.Fun link)</a>
+            <a href="https://t.me/four_friends_portal" class="cta-button">Join the Movement and chat with us (TG link)</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section class="about">
-        <h2>Who are Four Friends?</h2>
+        <h2>What is Four Friends?</h2>
         <p>Four Friends are the latest and greatest friends in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!</p>
     </section>
 
@@ -168,7 +177,7 @@
         <h2>Survival Memes for Every Investor</h2>
         <div class="meme-grid">
             <div class="meme-item">
-                <img src="https://imgur.com/a/YKtJ0zF" alt="Meme 1">
+                <img src="https://i.imgur.com/VMNkpKR.jpeg" alt="Meme 1">
                 <p>"When Lambo?" - The eternal question. Without an answer!</p>
             </div>
             <div class="meme-item">
