--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
                 <p>"When Lambo?" - The eternal question. Without an answer!</p>
             </div>
             <div class="meme-item">
-                <img src="https://imgur.com/a/U4j2yak" alt="Meme 2">
+                <img src="https://pbs.twimg.com/media/DRVSVcYUQAwl3Ky.jpg" alt="Meme 2">
                 <p>HODL like a champ. Dips are for the weak! FIGHT!</p>
             </div>
             <div class="meme-item">
-                <img src="https://imgur.com/a/9Dz2bY5" alt="Meme 3">
+                <img src="https://i.imgur.com/IcRSf4N.jpeg" alt="Meme 3">
                 <p>"To the Moon!" - As declared by the space king.</p>
             </div>
         </div>
