--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     <!-- About Section -->
     <section class="about">
         <h2>What is Four Friends?</h2>
+       <img src="https://i.imgur.com/dOZu8dO.jpeg" alt="Four Friends" class="hero-image">
         <p>Four Friends are the latest and greatest friends in digital currency hype. Ride the wave with us as we meme our way to the top. It's not just about coins, it's about connections. When the market cap hits 100M, you'll be glad you were here from the start!</p>
     </section>
 
