--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOUR FRIENDS</title>
+    <!-- Dodaj Google Fonts link -->
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap" rel="stylesheet">
     <style>
         /* General Reset */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Libre Baskerville', serif; /* Koristi Libre Baskerville font */
         }
 
         /* Body Styling */
@@ -130,15 +132,16 @@
         /* Description Section */
         .description {
             padding: 20px;
-            text-align: center; /* Center align the text */
+            text-align: center; /* Centrira tekst */
         }
 
         .description p {
-            margin-bottom: 15px; /* Add space between paragraphs */
-            max-width: 800px; /* Keep the text readable */
+            margin-bottom: 15px; /* Dodaj razmak između paragrafa */
+            max-width: 800px; /* Zadrži čitljivost teksta */
             margin-left: auto;
             margin-right: auto;
             text-align: center;
+            font-style: italic; /* Postavi font na italic */
         }
     </style>
 </head>
