--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="meme-grid">
             <div class="meme-item">
                 <img src="https://i.imgur.com/VMNkpKR.jpeg" alt="Meme 1">
-                <p>"When Lambo?" - The eternal question. Without an answer!</p>
+                <p>"When Lambo?" - The eternal question. Without an answer! Or maybe answer is in next meme? Who knows!</p>
             </div>
             <div class="meme-item">
                 <img src="https://pbs.twimg.com/media/DRVSVcYUQAwl3Ky.jpg" alt="Meme 2">
