--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
         <p><strong>Pavel Durov</strong> - "Telegram warrior and 'abs of steel' ambassador of the crypto world. If you can't send a message in his app, it probably wasn't important anyway."</p>
         
         <p><strong>Changpeng Zhao (CZ)</strong> - "Master ringmaster of the Binance circus, managing billions with a smile like he's running a local sushi joint. His secret move: buy the dip, sell the rip (but only when he tells you to!)."</p>
+    
+    <iframe width="463" height="823" src="https://www.youtube.com/embed/LtrgP17dw_E" title="Etherium Yükselince Vitalik! 😀- Mavi Kadın #shorts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
     <!-- Memes Section -->
