--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
         <p><strong>Changpeng Zhao (CZ)</strong> - "Master ringmaster of the Binance circus, managing billions with a smile like he's running a local sushi joint. His secret move: buy the dip, sell the rip (but only when he tells you to!)."</p>
     
     <iframe width="463" height="823" src="https://www.youtube.com/embed/LtrgP17dw_E" title="Etherium Yükselince Vitalik! 😀- Mavi Kadın #shorts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="1250" height="703" src="https://www.youtube.com/embed/vzQSQUAPUXs" title="Elon Musk Shares Hilarious AI Video of Himself and Trump Dancing to Stayin&#39; Alive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="463" height="823" src="https://www.youtube.com/embed/oAt4qdMW_8E" title="💪👦Pavel Durov Evolution #shorts #paveldurov #evolution #transformation #vk #telegram #durov" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
     <!-- Memes Section -->
