--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             justify-content: center;
         }
 
+        .hero-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         .hero-image {
             width: 80%;
             max-width: 600px;
@@ -61,10 +67,18 @@
             font-weight: bold;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+            margin: 10px; /* Dodaj margin da se dugmad ne dodirnu */
         }
 
         .cta-button:hover {
             background-color: #e68900;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .hero-content {
+                flex-direction: column; /* Osiguraj da su dugmad jedan ispod drugog */
+            }
         }
 
         /* About Section */
